[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/fonts/8-bit-fortress-font-7px.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UI/Controls/PlayButton.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ui/back-button.png" type="Texture" id=3]
[ext_resource path="res://src/UI/Controls/BackButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/StoryIntroScreen/dialogbox.png" type="Texture" id=5]
[ext_resource path="res://src/UI/StoryIntroScreen/background.png" type="Texture" id=6]
[ext_resource path="res://src/actors/player/sprites/player.png" type="Texture" id=7]
[ext_resource path="res://src/UI/StoryIntroScreen/StoryIntro.gd" type="Script" id=8]
[ext_resource path="res://assets/themes/test_theme.tres" type="Theme" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 33, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 66, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 99, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 32, 33, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 33, 32, 33, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 66, 32, 33, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 99, 32, 33, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 132, 32, 33, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 165, 32, 33, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 33, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 33, 64, 33, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "jump-up",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "jump-down",
"speed": 5.0
} ]

[sub_resource type="Animation" id=14]
resource_name = "jump"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 216, 128 ), Vector2( 232, 120 ), Vector2( 240, 144 ), Vector2( 242, 168 ), Vector2( 245, 184 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "jump_up"
}, {
"args": [  ],
"method": "jump_down"
}, {
"args": [  ],
"method": "_on_SkipButton_button_up"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "walk-in"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 128 ), Vector2( 136, 128 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "walk-out"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 136, 128 ), Vector2( 216, 128 ) ]
}

[node name="StoryIntro" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="Control"]
texture = ExtResource( 6 )
centered = false

[node name="DialogBox1" type="Sprite" parent="Control"]
position = Vector2( 160, 72 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Control/DialogBox1"]
margin_left = -138.0
margin_top = -22.0
margin_right = 356.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This castle has been shrowded in mystery for centuries
 and it is said to be cursed by demons).  My lord has sent
 many ninja to investigate, but none have ever returned."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox2" type="Sprite" parent="Control"]
position = Vector2( 160, 72 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Control/DialogBox2"]
margin_left = -138.0
margin_top = -26.0
margin_right = 356.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "With my unique \"Frog_yo_jutsu\" technique, I will uncover
the castle's secrets and be rewarded handsomely.  The 
castle is impenetrable from the outside, so I will have to 
enter by the underground caverns beneath.  Here goes...
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 120.0
margin_top = 160.0
margin_right = 195.0
margin_bottom = 174.0
custom_fonts/font = ExtResource( 1 )
text = "Tap to continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Control" instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -20.0
margin_right = 21.0
texture_normal = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene_path = "res://src/UI/WorldSelectScreen/WorldSelect.tscn"

[node name="SkipButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -49.0
margin_top = 5.0
margin_right = -7.0
margin_bottom = 23.0
theme = ExtResource( 9 )
text = "Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 245, 184 )
frames = SubResource( 5 )
animation = "jump-down"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/jump = SubResource( 14 )
anims/walk-in = SubResource( 12 )
anims/walk-out = SubResource( 13 )

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -223.0
margin_top = -22.0
margin_right = -205.0
margin_bottom = -4.0
theme = ExtResource( 9 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Control/ClickRect" to="." method="_on_ClickRect_gui_input"]
[connection signal="button_up" from="Control/BackButton" to="Control/BackButton" method="_on_button_up"]
[connection signal="button_up" from="Control/SkipButton" to="." method="_on_SkipButton_button_up"]
[connection signal="button_up" from="ContinueButton" to="." method="_on_ContinueButton_button_up"]
